[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/places/enterance.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/aseprite_files/places/entrance.aseprite" type="SpriteFrames" id=3]
[ext_resource path="res://assets/aseprite_files/places/snow.ase" type="SpriteFrames" id=4]
[ext_resource path="res://scenes/actors/elf.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 3 )

[node name="enterance" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Node2D" parent="."]

[node name="bg" type="AnimatedSprite" parent="background"]
position = Vector2( 64, 64 )
frames = ExtResource( 3 )
animation = "closed"
frame = 3
playing = true

[node name="border" type="StaticBody2D" parent="background"]
collision_mask = 0

[node name="outer" type="CollisionPolygon2D" parent="background/border"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 0, 107, 33, 84, 56, 76, 79, 68, 98, 78, 107, 104, 128, 119, 128, 128, 0, 128 )

[node name="rock" type="CollisionPolygon2D" parent="background/border"]
visible = false
position = Vector2( 34, 113 )
polygon = PoolVector2Array( 37, -3, 39, -8, 48, -8, 51, -3, 50, 0, 38, 0 )

[node name="doorTrigger" type="Area2D" parent="background"]
position = Vector2( 66, 81 )
collision_layer = 0
collision_mask = 32

[node name="collision" type="CollisionShape2D" parent="background/doorTrigger"]
shape = SubResource( 2 )

[node name="objects" type="Node2D" parent="."]

[node name="player" parent="objects" instance=ExtResource( 2 )]
position = Vector2( 16, 117 )

[node name="elf" parent="objects" instance=ExtResource( 5 )]
position = Vector2( 78, 107 )

[node name="foreground" type="Node2D" parent="."]

[node name="snow" type="AnimatedSprite" parent="foreground"]
frames = ExtResource( 4 )
animation = "idle"
playing = true
centered = false

[connection signal="animation_finished" from="background/bg" to="." method="_on_bg_animation_finished"]
[connection signal="body_entered" from="background/doorTrigger" to="." method="_door_trigger"]
